[tool.poetry]
name = "graiax-sayamod-requireEz"
version = "0.1.0"
description = "[Sayamod] 轻松require——解决依赖问题"
authors = ["Eric <erictianc@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
